--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -128,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.Pair"
+       "com.twosigma.beaker.javash.bkr480427de.Pair"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.AAA"
+       "com.twosigma.beaker.javash.bkr480427de.AAA"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "null"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,21 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.Pair"
+       "com.twosigma.beaker.javash.bkr480427de.Pair"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// Pair<String,String>, Pair<Integer,Integer>\n",
+    "// Pair< Pair<Integer,String>, Integer >\n",
     "class Pair<A,B> {\n",
     "    A first;\n",
     "    B second;\n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +247,7 @@
        "null"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +308,7 @@
     "\n",
     "자연수(음이 아닌 정수)를 Peano라는 수학자는 대략 다음과 같은 성질을 만족하는 가장 작은 집합을 자연수로 정의했다고 합니다.\n",
     " * 귀납기초(induction base): 0은 자연수에 속한다.\n",
-    " * 귀납가정(induction step): n이 자연수에 속한다면 n 바로 다음 (즉, 1만큼 더 큰) 수도 자연수에 속한다.\n",
+    " * 귀납단계(induction step): n이 자연수에 속한다면 n 바로 다음 (즉, 1만큼 더 큰) 수도 자연수에 속한다.\n",
     "\n",
     "그래서 이런 구조로부터 우리가 잘 아는 수학적귀납법이라는 증명방법 혹은 추론규칙을 자연수에 대한 자연스런 증명방법으로 받아들인다.\n",
     "\n",
@@ -328,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.NodeInt"
+       "com.twosigma.beaker.javash.bkr480427de.NodeInt"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +355,9 @@
     "    NodeInt tail() { return next; }\n",
     "\n",
     "    @Override // 리스트의 내용을 알아보기 편하게 출력되게\n",
-    "    public String toString() { return value + \", \" + next; }\n",
+    "    public String toString() {\n",
+    "        return head() + \", \" + tail();\n",
+    "    }\n",
     "\n",
     "    ////////////////////////////////////////////////////////////////\n",
     "\n",
@@ -393,7 +397,9 @@
     "    boolean palindrome() {\n",
     "        return false; // 작성해보기\n",
     "    }\n",
-    "    NodeNodeInt tails() { // 1,2,3,null 의 tails는 [2,3,null],[3,null],[null],null\n",
+    "    NodeNodeInt tails() {\n",
+    "        // 1,2,3,null 의 tails는\n",
+    "        // [2,3,null],[3,null],[null],null\n",
     "        return null; // 이것도 제대로\n",
     "    }\n",
     "}\n",
@@ -408,13 +414,69 @@
     "    NodeNodeInt tail() { return next; }\n",
     "\n",
     "    @Override // 리스트의 내용을 알아보기 편하게 출력되게\n",
-    "    public String toString() { return \"[\" + value + \"], \" + next; }\n",
+    "    public String toString() {\n",
+    "        return \"[\" + head() + \"], \" + tail();\n",
+    "    }\n",
     "    \n",
     "    static NodeInt flat(NodeNodeInt xss) { return (xss==null)? null: xss.flat(); }\n",
     "    \n",
     "    NodeInt flat() { return null; } // 힌트: 이것도 append를 이용하면 쉽다\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l0: null\n",
+      "l1: 3, null\n",
+      "l2: 2, 3, null\n",
+      "l3: 1, 2, 3, null\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NodeInt l0 = null;\n",
+    "NodeInt l1 = new NodeInt(3,l0);\n",
+    "NodeInt l2 = new NodeInt(2,l1);\n",
+    "NodeInt l3 = new NodeInt(1,l2);\n",
+    "\n",
+    "System.out.println( \"l0: \" + l0 ) ;\n",
+    "System.out.println( \"l1: \" + l1 ) ;\n",
+    "System.out.println( \"l2: \" + l2 ) ;\n",
+    "System.out.println( \"l3: \" + l3 ) ;\n",
+    "\n",
+    "return NodeInt.length( l2 );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -633,6 +695,107 @@
     "// 왜 어째서??? Object의 boolean equals(Object o) { return this==o; }\n",
     "return p1.equals(p2); "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr480427de.Calc"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Calc {\n",
+    "    int v;\n",
+    "    // void add(int n)\n",
+    "    // void mult(int n)\n",
+    "    Calc add(int n) { v += n; return this; }\n",
+    "    Calc mult(int n) { v *= n; return this; }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Calc calc = new Calc();\n",
+    "\n",
+    "System.out.println(calc.v);\n",
+    "\n",
+    "calc.add(3).add(2).mult(2);\n",
+    "/*\n",
+    "calc.add(3);\n",
+    "System.out.println(calc.v);\n",
+    "calc.add(2);\n",
+    "System.out.println(calc.v);\n",
+    "calc.mult(2);\n",
+    "*/\n",
+    "System.out.println(calc.v);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -647,7 +810,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "11.0.1"
   },
   "toc": {
    "base_numbering": 1,
