--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -30,9 +30,9 @@
     "C++에 범용적이고 재활용성이 높은 기본적인 자료구조와 알고리듬을 제공하기 위해 설계된\n",
     "*표준 템플릿 라이브러리*(Standard Template Library, STL)라고 불리던 것에서 비롯되었다.\n",
     "이러한 라이브러리를 설계하기 위하 당시로서는 C++에 커다란 변화인 template이라는 기능을 추가할 것을 요구했고\n",
-    "STL이 점점 인기를 끌게 됨에 따라 C++ 표준에도 tempalte이 추가되었을 뿐 아니라 과게어 STL이라고 불렸던 라이브러리가\n",
+    "STL이 점점 인기를 끌게 됨에 따라 C++ 표준에도 template이 추가되었을 뿐 아니라 과게어 STL이라고 불렸던 라이브러리가\n",
     "지금은 C++ 표준라이브러리의 일부로 녹아들어 지금은 *C++ 표준 컨테이너*(C++ Standard Containres) 등이 되었다.\n",
-    "이는 Java와 C#에도 영향을 미쳐 Java와 C#에도 제너릭(generic)이라는 유사한 기능들이 비슷한 문법으로 추가되다\n",
+    "이는 Java와 C#에도 영향을 미쳐 Java와 C#에도 제너릭(generic)이라는 유사한 기능들이 비슷한 문법으로 추가되었다.\n",
     "또한 Java에도 *자바 컬렉션 프레임워크*(Java Collections Foundation, JCF)라고 불리는 자료구조 라이브러리가 있는데 바로 이 JCF관련 내용에 대해서 다루는 것이 교과서 44장이다.\n",
     "이러한 컬렉션 프레임워크를 사용하려면 기본적으로 Java에서 알아야 하는 개념이 제네릭(Generic)이다. "
    ]
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.PairIntInt"
+       "com.twosigma.beaker.javash.bkr7ce24be8.PairIntInt"
       ]
      },
      "execution_count": 1,
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.PairIntDouble"
+       "com.twosigma.beaker.javash.bkr7ce24be8.PairIntDouble"
       ]
      },
      "execution_count": 2,
@@ -102,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.PairDoubleDouble"
+       "com.twosigma.beaker.javash.bkr7ce24be8.PairDoubleDouble"
       ]
      },
      "execution_count": 3,
@@ -128,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr480427de.Pair"
+       "com.twosigma.beaker.javash.bkr7ce24be8.Pair"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr480427de.AAA"
+       "com.twosigma.beaker.javash.bkr7ce24be8.AAA"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,24 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "null"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "cannot find symbol",
+     "evalue": "cannot find symbol",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot find symbol\u001b[0;0m",
+      "\u001b[1;31m  symbol:   method length()\u001b[0;0m",
+      "\u001b[1;31m  location: variable second of type java.lang.Object\u001b[0;0m",
+      "\u001b[1;31m sspair.second.length()\u001b[0;0m",
+      "\u001b[1;31m ^                   ^   \u001b[0;0m"
+     ]
     }
    ],
    "source": [
     "Pair sspair = new Pair();\n",
     "sspair.first = new String(\"Hello\");\n",
     "sspair.second = new String(\"World\");\n",
+    "\n",
+    "sspair.second.length();\n",
     "\n",
     "// .. ..\n",
     "sspair.second = new AAA();\n",
@@ -213,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr480427de.Pair"
+       "com.twosigma.beaker.javash.bkr7ce24be8.Pair"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +251,7 @@
        "null"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,10 +282,10 @@
    "outputs": [
     {
      "ename": "incompatible types",
-     "evalue": " com.twosigma.beaker.javash.bkrfcd68403.AAA cannot be converted to java.lang.String",
+     "evalue": " com.twosigma.beaker.javash.bkr7ce24be8.AAA cannot be converted to java.lang.String",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mincompatible types: com.twosigma.beaker.javash.bkrfcd68403.AAA cannot be converted to java.lang.String\u001b[0;0m",
+      "\u001b[0;31mincompatible types: com.twosigma.beaker.javash.bkr7ce24be8.AAA cannot be converted to java.lang.String\u001b[0;0m",
       "\u001b[0;31m sspair.second = new AAA()\u001b[0;0m",
       "\u001b[0;31m                 ^        ^ \u001b[0;0m"
      ]
@@ -310,6 +314,8 @@
     " * 귀납기초(induction base): 0은 자연수에 속한다.\n",
     " * 귀납단계(induction step): n이 자연수에 속한다면 n 바로 다음 (즉, 1만큼 더 큰) 수도 자연수에 속한다.\n",
     "\n",
+    "참고: 위키피디아 [페아노 공리계](https://ko.wikipedia.org/wiki/%ED%8E%98%EC%95%84%EB%85%B8_%EA%B3%B5%EB%A6%AC%EA%B3%84)에서 5번 6번 공리에 해당\n",
+    "\n",
     "그래서 이런 구조로부터 우리가 잘 아는 수학적귀납법이라는 증명방법 혹은 추론규칙을 자연수에 대한 자연스런 증명방법으로 받아들인다.\n",
     "\n",
     "어떤 명제가 자연수 0에 대해서 만족하고 (귀납기초) 또 n에 대해서 만족한다고 가정했을 때 (귀납가정) n 바로 다음 수에 대해서도 만족한다면,\n",
@@ -330,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr480427de.NodeInt"
+       "com.twosigma.beaker.javash.bkr7ce24be8.NodeInt"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +451,7 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,26 +467,12 @@
     "System.out.println( \"l2: \" + l2 ) ;\n",
     "System.out.println( \"l3: \" + l3 ) ;\n",
     "\n",
-    "return NodeInt.length( l2 );"
+    "return NodeInt.length( l2 ); // l0같은 경우 l0.length() 하면 null포인터 예외 발생. 그래서 null까지 포함해서 처리하는 클래스 메소드로 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +505,7 @@
        "null"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,6 +521,7 @@
     "System.out.println( \"l2: \" + l2 ) ;\n",
     "System.out.println( \"l3: \" + l3 ) ;\n",
     "\n",
+    "// l0같은 경우 l0.length() 하면 null포인터 예외 발생. 그래서 null까지 포함해서 처리하는 클래스 메소드로 \n",
     "System.out.println( \"NodeInt.length(l0) = \" + NodeInt.length(l0) ); // 0\n",
     "System.out.println( \"NodeInt.length(l1) = \" + NodeInt.length(l1) ); // 1\n",
     "System.out.println( \"NodeInt.length(l2) = \" + NodeInt.length(l2) ); // 2\n",
@@ -581,6 +574,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# `this`를 리턴하는 활용 사례\n",
+    "\n",
+    "중간고사에서 `this`를 리턴해야 되는 문제가 있었는데, 교과서에는 이러한 활용방법이 잘 설명되지 않은 것 같아서 간단한 예제 하나."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr7ce24be8.Calc"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Calc {\n",
+    "    int v;\n",
+    "    // void add(int n) { v += n; }\n",
+    "    // void mult(int n) { v *= n; }\n",
+    "    Calc add(int n) { v += n; return this; }\n",
+    "    Calc mult(int n) { v *= n; return this; }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Calc calc = new Calc();\n",
+    "\n",
+    "System.out.println(calc.v);\n",
+    "\n",
+    "calc.add(3).add(2).mult(2);\n",
+    "/*\n",
+    "calc.add(3);\n",
+    "System.out.println(calc.v);\n",
+    "calc.add(2);\n",
+    "System.out.println(calc.v);\n",
+    "calc.mult(2);\n",
+    "*/\n",
+    "System.out.println(calc.v);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 아래는 오버로딩/오버라이딩 관련\n",
     "\n",
     "여기서부터는 나중에 다른 문서로 옮겨야 할듯"
@@ -588,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +675,7 @@
        "true"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,16 +692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfcd68403.Point"
+       "com.twosigma.beaker.javash.bkr7ce24be8.Point"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +741,7 @@
        "true"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,100 +772,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "com.twosigma.beaker.javash.bkr480427de.Calc"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Calc {\n",
-    "    int v;\n",
-    "    // void add(int n)\n",
-    "    // void mult(int n)\n",
-    "    Calc add(int n) { v += n; return this; }\n",
-    "    Calc mult(int n) { v *= n; return this; }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "null"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Calc calc = new Calc();\n",
-    "\n",
-    "System.out.println(calc.v);\n",
-    "\n",
-    "calc.add(3).add(2).mult(2);\n",
-    "/*\n",
-    "calc.add(3);\n",
-    "System.out.println(calc.v);\n",
-    "calc.add(2);\n",
-    "System.out.println(calc.v);\n",
-    "calc.mult(2);\n",
-    "*/\n",
-    "System.out.println(calc.v);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -810,7 +786,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.1"
+   "version": "11.0.3"
   },
   "toc": {
    "base_numbering": 1,
