--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -544,7 +544,7 @@
     "NodeNodeInt ll1 = new NodeNodeInt(l1, new NodeNodeInt(l2, new NodeNodeInt(l3, ll0)));\n",
     "\n",
     "System.out.println( \"ll1: \" + ll1 );\n",
-    "System.out.println( \"ll1.flat() = \" + ll1.flat() ); // 3, 2, 3, 1, 2, 3, null 이런 결과가"
+    "System.out.println( \"ll1.flat() = \" + ll1.flat() ); // 3, 2, 3, 1, 2, 3, null 이런 결과가 나와야"
    ]
   },
   {
